# catima

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  abundance_database.cpp  appveyor.yml  build_config.in  calculations.cpp  calculations.h  catima.cpp  catima.h  catima.pyx  catimac.pxd  config.h  constants.h  convert.h  cwrapper.cpp  cwrapper.h  data_atima.h  data_ionisation_potential.h  data_srim.h  doxygen.in  generated_LS_coeff.h  init.sh.in  integrator.cpp  integrator.h  material_database.cpp  material_database.h  nucdata.cpp  pyproject.toml  reactions.cpp  reactions.h  setup.py.in  spline.cpp  spline.h  srim.cpp  srim.h  storage.cpp  storage.h  (+2 more)
.github/workflows/: build.yml  build_linux.yaml  codeql.yml
catima/: CMakeLists.txt
catima/examples/: makefile  materials.cpp  simple.cpp
catima/include/catima/: calculations.h  data_atima.h  nucdata.h
catima/src/: cwrapper.cpp  srim.cpp
catima/tests/: test_abundances.cpp  test_dedx_range.cpp
catima/utils/: generator.cpp
docs/: Doxyfile  Makefile  README.md  api.rst  calculations.tex  catima_calculator.md  catima_manual.md  conf.py  index.rst  pycatima.md  pycatima.rst  requirements.txt
examples/: dedx  dedx.cpp  example2.cpp  ls_coefficients  ls_coefficients.cpp  makefile  materials  materials.cpp  reactions.cpp  simple  simple.cpp
include/catima/: abundance_database.h  catima.h  config.h  constants.h  convert.h  generated_LS_coeff.h  glq_integrator.h  integrator.h  material_database.h  srim.h  storage.h  structures.h
libs/: gkq_integrator.h
pymodule/: CMakeLists.txt  Untitled.ipynb  pycatima.cpp  pyproject.toml  setup.py  setup.py.in
pymodule/pycatima/: __init__.py
pymodule/src/: _ext.cpp
src/: calculations.cpp  catima.cpp  integrator.cpp  material_database.cpp  nucdata.cpp  spline.cpp  storage.cpp  structures.cpp
tests/: CMakeLists.txt  test.py  test2.py  test_abundances.cpp  test_c.c  test_calculations.cpp  test_dedx_range.cpp  test_generated.cpp  test_reaction.cpp  test_storage.cpp  test_structures.cpp  testutils.h
utils/: generator.cpp
